tests/baselines/reference/lambdaArgCrash.errors.txt
tests/cases/compiler/lambdaArgCrash.ts(27,25): error TS2304: Cannot find name 'ItemSet'.
tests/cases/compiler/lambdaArgCrash.ts(29,14): error TS2345: Argument of type '(items: ItemSet) => void' is not assignable to parameter of type '() => any'.


==== tests/cases/compiler/lambdaArgCrash.ts (2 errors) ====
    class Event {
    
    	 private _listeners: any[] = [];
    
    	 constructor () {
    
    		 // TODO: remove
    
    		 this._listeners = [];
    
    	}
    
    	 add(listener: () => any): void {
    
    		 /// <summary>Registers a new listener for the event.</summary>
    
    		 /// <param name="listener">The callback function to register.</param>
    
    		 this._listeners.push(listener);
    
    	}
    
    }
     
    class ItemSetEvent extends Event {
    
    	 add(listener: (items: ItemSet) => void ) {
    	                       ~~~~~~~
!!! error TS2304: Cannot find name 'ItemSet'.
    
    	 	super.add(listener);
    	 	          ~~~~~~~~
!!! error TS2345: Argument of type '(items: ItemSet) => void' is not assignable to parameter of type '() => any'.
    
    	}
    
    }
    